@@ -101,6 +101,9 @@ Avro 1.7.0 (unreleased)
     AVRO-1096. C: Describe CMAKE_OSX_ARCHITECTURES in installation
     instructions.  (dcreager)
 
+    AVRO-1088. C: Performance tests for arrays and schema resolution.
+    (Vivek Nadkarni via dcreager)
+
 Avro 1.6.3 (5 March 2012)
 
     AVRO-1077. Missing 'inline' for union set function. (thiru)
